.metadata/.plugins/org.eclipse.cdt.ui/Uni_Box_LSM.build.log
10:36:52 **** Incremental Build of configuration Debug for project Uni_Box_LSM ****
make -j4 all 
arm-none-eabi-gcc "../Drivers/Menu/menu.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"/home/shammman/Dokumenty/STM32_CubeIDE/Learning/Uni_Box_LSM/Drivers/LCD4x20" -I"/home/shammman/Dokumenty/STM32_CubeIDE/Learning/Uni_Box_LSM/Drivers/KeyPad" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Drivers/Menu/menu.d" -MT"Drivers/Menu/menu.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/Menu/menu.o"
../Drivers/Menu/menu.c:14:3: error: unknown type name 'menu_t'
   14 |   menu_t* next;
      |   ^~~~~~
../Drivers/Menu/menu.c:15:3: error: unknown type name 'menu_t'
   15 |   menu_t* prev;
      |   ^~~~~~
../Drivers/Menu/menu.c:16:3: error: unknown type name 'menu_t'
   16 |   menu_t* child;
      |   ^~~~~~
../Drivers/Menu/menu.c:17:3: error: unknown type name 'menu_t'
   17 |   menu_t* parent;
      |   ^~~~~~
../Drivers/Menu/menu.c:22:1: warning: data definition has no type or storage class
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      | ^~~~~
../Drivers/Menu/menu.c:22:1: warning: type defaults to 'int' in declaration of 'menu1' [-Wimplicit-int]
../Drivers/Menu/menu.c:22:9: warning: initialization of 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      |         ^~~~~~~~~~~~~~
../Drivers/Menu/menu.c:22:9: note: (near initialization for 'menu1')
../Drivers/Menu/menu.c:22:26: error: 'menu2' undeclared here (not in a function); did you mean 'menu1'?
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      |                          ^~~~~
      |                          menu1
../Drivers/Menu/menu.c:22:25: warning: excess elements in scalar initializer
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      |                         ^
../Drivers/Menu/menu.c:22:25: note: (near initialization for 'menu1')
../Drivers/Menu/menu.c:22:34: error: 'menu5' undeclared here (not in a function); did you mean 'menu1'?
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      |                                  ^~~~~
      |                                  menu1
../Drivers/Menu/menu.c:22:33: warning: excess elements in scalar initializer
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      |                                 ^
../Drivers/Menu/menu.c:22:33: note: (near initialization for 'menu1')
../Drivers/Menu/menu.c:22:42: error: 'sub_menu1_1' undeclared here (not in a function)
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      |                                          ^~~~~~~~~~~
../Drivers/Menu/menu.c:22:41: warning: excess elements in scalar initializer
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      |                                         ^
../Drivers/Menu/menu.c:22:41: note: (near initialization for 'menu1')
../Drivers/Menu/menu.c:22:55: warning: excess elements in scalar initializer
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      |                                                       ^~~~
../Drivers/Menu/menu.c:22:55: note: (near initialization for 'menu1')
../Drivers/Menu/menu.c:22:61: warning: excess elements in scalar initializer
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      |                                                             ^~~~
../Drivers/Menu/menu.c:22:61: note: (near initialization for 'menu1')
../Drivers/Menu/menu.c:24:8: error: conflicting types for 'menu1'
   24 | menu_t menu1;
      |        ^~~~~
../Drivers/Menu/menu.c:22:1: note: previous definition of 'menu1' was here
   22 | menu1={ "CONFIGRATION", &menu2, &menu5, &sub_menu1_1, NULL, NULL };     // utworzenie struktury
      | ^~~~~
make: *** [Drivers/Menu/subdir.mk:19: Drivers/Menu/menu.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

10:36:53 Build Failed. 9 errors, 8 warnings. (took 767ms)

